@@ -1,9 +1,7 @@
 package com.example.vex360.shared.exceptions;
 
-import java.time.LocalDateTime;
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
@@ -23,184 +21,188 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class GlobalExceptionHandler {
 
-        // 1. Business Exceptions (thrown by developers)
-        @ExceptionHandler(AppException.class)
-        public ResponseEntity<ErrorResponse> handleAppException(AppException ex, HttpServletRequest request) {
-                ErrorCode errorCode = ex.getErrorCode();
-                log.warn("Business exception occurred: [{}] - {}", 
-                                LogSanitizer.sanitize(errorCode.getCode()), 
-                                LogSanitizer.sanitize(errorCode.getMessage()));
+    // 1. Business Exceptions (thrown by developers)
+    @ExceptionHandler(AppException.class)
+    public ResponseEntity<ErrorResponse> handleAppException(AppException ex, HttpServletRequest request) {
+        ErrorCode errorCode = ex.getErrorCode();
+        log.warn("Business exception occurred: [{}] - {}",
+                LogSanitizer.sanitize(errorCode.getCode()),
+                LogSanitizer.sanitize(errorCode.getMessage()));
 
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        // 2. Validation Exceptions (When @Valid in Controller fails)
-        @ExceptionHandler(MethodArgumentNotValidException.class)
-        public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex, HttpServletRequest request) {
-                log.warn("Validation failed for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
+    // 2. Validation Exceptions (When @Valid in Controller fails)
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex,
+            HttpServletRequest request) {
+        log.warn("Validation failed for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
 
-                List<ErrorResponse.ValidationError> validationErrors = ex.getBindingResult().getFieldErrors().stream()
-                                .map(e -> ErrorResponse.ValidationError.builder()
-                                                .field(e.getField())
-                                                .message(e.getDefaultMessage())
-                                                .build())
-                                .collect(Collectors.toList());
+        List<ErrorResponse.ValidationError> validationErrors = ex.getBindingResult().getFieldErrors().stream()
+                .map(e -> ErrorResponse.ValidationError.builder()
+                        .field(e.getField())
+                        .message(e.getDefaultMessage())
+                        .build())
+                .toList();
 
-                ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .validationErrors(validationErrors)
-                                .build();
+        ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .validationErrors(validationErrors)
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        // 3. Request body parsing exceptions (invalid JSON or enum values)
-        @ExceptionHandler(HttpMessageNotReadableException.class)
-        public ResponseEntity<ErrorResponse> handleHttpMessageNotReadableException(
-                        HttpMessageNotReadableException ex,
-                        HttpServletRequest request) {
-                log.warn("Request body is not readable for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
+    // 3. Request body parsing exceptions (invalid JSON or enum values)
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<ErrorResponse> handleHttpMessageNotReadableException(
+            HttpMessageNotReadableException ex,
+            HttpServletRequest request) {
+        log.warn("Request body is not readable for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
 
-                ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        // 4. Multipart request exceptions (unsupported part media type or missing required parts)
-        @ExceptionHandler(HttpMediaTypeNotSupportedException.class)
-        public ResponseEntity<ErrorResponse> handleHttpMediaTypeNotSupportedException(
-                        HttpMediaTypeNotSupportedException ex,
-                        HttpServletRequest request) {
-                log.warn("Unsupported media type for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
+    // 4. Multipart request exceptions (unsupported part media type or missing
+    // required parts)
+    @ExceptionHandler(HttpMediaTypeNotSupportedException.class)
+    public ResponseEntity<ErrorResponse> handleHttpMediaTypeNotSupportedException(
+            HttpMediaTypeNotSupportedException ex,
+            HttpServletRequest request) {
+        log.warn("Unsupported media type for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
 
-                ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        @ExceptionHandler(MissingServletRequestPartException.class)
-        public ResponseEntity<ErrorResponse> handleMissingServletRequestPartException(
-                        MissingServletRequestPartException ex,
-                        HttpServletRequest request) {
-                log.warn("Missing multipart request part for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
+    @ExceptionHandler(MissingServletRequestPartException.class)
+    public ResponseEntity<ErrorResponse> handleMissingServletRequestPartException(
+            MissingServletRequestPartException ex,
+            HttpServletRequest request) {
+        log.warn("Missing multipart request part for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
 
-                ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorCode errorCode = ErrorCode.VALIDATION_FAILED;
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        // 5. Method Not Allowed
-        @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
-        public ResponseEntity<ErrorResponse> handleHttpRequestMethodNotSupportedException(
-                        HttpRequestMethodNotSupportedException ex,
-                        HttpServletRequest request) {
-                log.warn("HTTP method not supported for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
+    // 5. Method Not Allowed
+    @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
+    public ResponseEntity<ErrorResponse> handleHttpRequestMethodNotSupportedException(
+            HttpRequestMethodNotSupportedException ex,
+            HttpServletRequest request) {
+        log.warn("HTTP method not supported for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
 
-                ErrorCode errorCode = ErrorCode.METHOD_NOT_ALLOWED;
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorCode errorCode = ErrorCode.METHOD_NOT_ALLOWED;
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        // 6. Runtime Exceptions (e.g. Database Exception, NullPointer, etc.)
-        // Prevent information disclosure by returning a generic uncaught exception error and logging stack trace
-        @ExceptionHandler(RuntimeException.class)
-        public ResponseEntity<ErrorResponse> handleRuntimeException(RuntimeException ex, HttpServletRequest request) {
-                log.error("Unhandled runtime exception occurred at {}: ", LogSanitizer.sanitize(request.getRequestURI()), ex);
+    // 6. Runtime Exceptions (e.g. Database Exception, NullPointer, etc.)
+    // Prevent information disclosure by returning a generic uncaught exception
+    // error and logging stack trace
+    @ExceptionHandler(RuntimeException.class)
+    public ResponseEntity<ErrorResponse> handleRuntimeException(RuntimeException ex, HttpServletRequest request) {
+        log.error("Unhandled runtime exception occurred at {}: ", LogSanitizer.sanitize(request.getRequestURI()), ex);
 
-                ErrorCode errorCode = ErrorCode.UNCATCHED_EXCEPTION;
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorCode errorCode = ErrorCode.UNCATCHED_EXCEPTION;
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        // 7. Spring Security AccessDeniedException
-        @ExceptionHandler(AccessDeniedException.class)
-        public ResponseEntity<ErrorResponse> handleAccessDeniedException(AccessDeniedException ex, HttpServletRequest request) {
-                log.warn("Access denied for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
-                ErrorCode errorCode = ErrorCode.UNAUTHORIZED;
+    // 7. Spring Security AccessDeniedException
+    @ExceptionHandler(AccessDeniedException.class)
+    public ResponseEntity<ErrorResponse> handleAccessDeniedException(AccessDeniedException ex,
+            HttpServletRequest request) {
+        log.warn("Access denied for request: {}", LogSanitizer.sanitize(request.getRequestURI()));
+        ErrorCode errorCode = ErrorCode.UNAUTHORIZED;
 
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 
-        // 8. Other Exceptions
-        // Log full stack trace and return standard uncaught exception response
-        @ExceptionHandler(Exception.class)
-        public ResponseEntity<ErrorResponse> handleGenericException(Exception ex, HttpServletRequest request) {
-                log.error("System encountered an unexpected error at {}: ", LogSanitizer.sanitize(request.getRequestURI()), ex);
+    // 8. Other Exceptions
+    // Log full stack trace and return standard uncaught exception response
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ErrorResponse> handleGenericException(Exception ex, HttpServletRequest request) {
+        log.error("System encountered an unexpected error at {}: ", LogSanitizer.sanitize(request.getRequestURI()), ex);
 
-                ErrorCode errorCode = ErrorCode.UNCATCHED_EXCEPTION;
-                ErrorResponse errorResponse = ErrorResponse.builder()
-                                .timestamp(LocalDateTime.now())
-                                .status(errorCode.getHttpStatus().value())
-                                .error(errorCode.getHttpStatus().name())
-                                .code(errorCode.getCode())
-                                .message(errorCode.getMessage())
-                                .path(request.getRequestURI())
-                                .build();
+        ErrorCode errorCode = ErrorCode.UNCATCHED_EXCEPTION;
+        ErrorResponse errorResponse = ErrorResponse.builder()
+                .timestamp(Instant.now())
+                .status(errorCode.getHttpStatus().value())
+                .error(errorCode.getHttpStatus().name())
+                .code(errorCode.getCode())
+                .message(errorCode.getMessage())
+                .path(request.getRequestURI())
+                .build();
 
-                return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
-        }
+        return ResponseEntity.status(errorCode.getHttpStatus()).body(errorResponse);
+    }
 }
